Fix list block not properly aligned (#21971)

--- a/packages/block-editor/src/components/block-list/style.scss
+++ b/packages/block-editor/src/components/block-list/style.scss
@@ -251,10 +251,13 @@
 	}
 }
 
-.wp-block {
+// Extra specificity needed to override default element margins like lists (ul).
+.block-editor-block-list__layout .wp-block {
 	margin-left: auto;
 	margin-right: auto;
+}
 
+.wp-block {
 	// Alignments.
 	&[data-align="left"],
 	&[data-align="right"] {
